proxy_apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-service
spec:
  ports:
    - port: 8123
  type: ExternalName
  externalName: 192.168.0.224
